# daily-paper-collector

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: config.yaml
gui/: app.py  state.py
gui/components/: paper_card.py  report_viewer.py  table_helpers.py
gui/pages/: papers.py  reports.py  settings.py
gui/views/: dashboard.py  interests.py  papers.py  reports.py
memory-bank/: architecture.md  daily-paper-collector-document.md  feature-implementation-1.md  feature-implementation-2.md  implementation-plan.md  progress.md  tech-stack.md
scripts/: run_pipeline.py
src/: config.py  main.py  pipeline.py
src/email/: sender.py
src/fetcher/: arxiv_fetcher.py
src/interest/: manager.py
src/llm/: __init__.py  base.py  claude_code_provider.py  claude_provider.py  openai_provider.py
src/matcher/: embedder.py  ranker.py
src/report/: generator.py
src/scheduler/: scheduler.py
src/store/: database.py
src/summarizer/: paper_summarizer.py
templates/: email_template.md
tests/: test_config.py  test_email_sender.py  test_embedder.py  test_error_handling.py  test_fetcher.py  test_gui.py  test_integration.py  test_interest_manager.py  test_llm_base.py  test_llm_claude.py  test_llm_claude_code.py  test_llm_openai.py  test_main.py  test_pipeline.py  test_ranker.py  test_report_generator.py  test_scheduler.py  test_store.py  test_summarizer.py  test_table_helpers.py
